# cpp_bagel_wrapper

./: CMakeLists.txt  README.md  manifest.xml
doc/: Makefile
doc/doxygen/: bagel_doxyconf  bagel_doxyconf_no_graphs
src/: BagelGraph.cpp  BagelGraph.hpp  CMakeLists.txt  cpp_bagel_wrapper.pc.in
test/: CMakeLists.txt  test_graph.cpp  test_graph.yml
